syntax = "proto3";
option go_package = "./AccountService";

service AccountService {
    rpc UserRegistration (RegistrationRequest) returns (SessionResponse) {}
    rpc UserAuthentication (UserAuthenticationRequest) returns (SessionResponse) {}
    rpc RequestAuthentication (RequestAuthenticationRequest) returns (RequestAuthenticationResponse) {}
    rpc LinkTelegram (TelegramSession) returns (TelegramConfirmationCode) {}
    rpc LinkTelegramConfirmCode (TelegramConfirmationCode) returns (LinkStatus) {}
}

message RegistrationRequest {
    string Email = 1;
    string Credentials = 2;
}

message UserAuthenticationRequest {
    string Credentials = 1;
}

message SessionResponse {
    User User = 1;
    string Token = 2;
    string Secret = 3;
}

message RequestAuthenticationRequest {
    string Base64Body = 1;
    string Token  = 2;
    string Base64Signature = 3;
}

message RequestAuthenticationResponse {
    bool Authenticated = 1;
}

message User {
    string UserId = 1;
    string Email = 2;
}

message TelegramSession {
    string Phone = 1;
    User User = 2;
}

message TelegramConfirmationCode {
    string PhoneCode = 1;
    string Key = 2;
}

message LinkStatus {
    bool Ok = 1;
    bool PasswordRequired = 2;
}